# digity-sdk

./: .gitignore  CLAUDE.md  DOCS.md  README.md  SUMMARY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
assets/: docs.css
changelog/: index.html
docs/: CNAME  README.md  SUMMARY.md  changelog.md  finger-architecture.md  guide-bimanual.md  hardware-overview.md  index.md  integrations-dashboard.md  integrations-rerun.md  integrations-ros2.md  quickstart.md  sdk-api-reference.md  sdk-core-concepts.md  system-requirements.md  troubleshooting.md  what-is-chiros.md
docs/assets/: docs.css  docs.js  site.css
examples/: basic.py  rerun_viewer.py
integrations-dashboard/: index.html
integrations-rerun/: index.html
integrations-ros2/: index.html
scripts/: sync_nav.py
sdk-api-reference/: index.html
sdk-core-concepts/: index.html
search/: search_index.json
src/digity/: __init__.py  _humi.py  _publisher.py  _serial.py  _stream.py  _types.py
src/digity/viz/: __init__.py  _agent.py  _server.py
src/digity/viz/static/js/: ability_hand.js  allegro_hand.js  inspire_hand.js  schunk_hand.js  shadow_hand.js
src/digity/viz/static/js/three/: BufferGeometryUtils.js  GLTFLoader.js  OrbitControls.patched.js  SkeletonUtils.js
src/digity/viz/static/models/: ultraleap_hand.glb  ultraleap_hand_flat.glb
src/digity/viz/templates/: login.html  multiview.html  record.html  setup.html  users.html  viewer.html
system-requirements/: index.html
theme/: main.html
troubleshooting/: index.html
what-is-digity/: index.html
